// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`typeConfigs should provide type configs 1`] = `
Array [
  Object {
    "component": [Function],
    "description": " ** Unsupported ** ",
    "name": "Missing",
    "type": "missing",
  },
  Object {
    "advanced": 3,
    "component": [Function],
    "description": "Send the contact a message",
    "form": [Function],
    "formHelper": SendMsgFormHelper {},
    "name": "Send Message",
    "type": "send_msg",
  },
  Object {
    "component": [Function],
    "description": "Send somebody else a message",
    "form": [Function],
    "formHelper": SendBroadcastFormHelper {},
    "name": "Send Broadcast",
    "type": "send_broadcast",
  },
  Object {
    "component": [Function],
    "description": "Label the incoming message",
    "form": [Function],
    "formHelper": AddLabelsFormHelper {},
    "name": "Add Labels",
    "type": "add_input_labels",
  },
  Object {
    "component": [Function],
    "description": "Add the contact to a group",
    "form": [Function],
    "formHelper": AddGroupsFormHelper {},
    "name": "Add to Group",
    "type": "add_contact_groups",
  },
  Object {
    "component": [Function],
    "description": "Remove the contact from a group",
    "form": [Function],
    "formHelper": RemoveGroupsFormHelper {},
    "name": "Remove from Group",
    "type": "remove_contact_groups",
  },
  Object {
    "component": [Function],
    "description": "Update the contact",
    "form": [Function],
    "formHelper": SetContactAttribFormHelper {},
    "name": "Update Contact",
    "type": "set_contact_field",
  },
  Object {
    "component": [Function],
    "description": "Update the contact",
    "form": [Function],
    "formHelper": SetContactAttribFormHelper {},
    "name": "Update Contact",
    "type": "set_contact_name",
  },
  Object {
    "component": [Function],
    "description": "Update the contact",
    "form": [Function],
    "formHelper": SetContactAttribFormHelper {},
    "name": "Update Contact",
    "type": "set_contact_language",
  },
  Object {
    "component": [Function],
    "description": "Update the contact",
    "form": [Function],
    "formHelper": SetContactAttribFormHelper {},
    "name": "Update Contact",
    "type": "set_contact_channel",
  },
  Object {
    "component": [Function],
    "description": "Send an email",
    "form": [Function],
    "formHelper": SendEmailFormHelper {},
    "name": "Send Email",
    "type": "send_email",
  },
  Object {
    "component": [Function],
    "description": "Save a result for this flow",
    "form": [Function],
    "formHelper": SetRunResultFormHelper {},
    "name": "Save Flow Result",
    "type": "set_run_result",
  },
  Object {
    "advanced": 1,
    "aliases": Array [
      "webhook",
    ],
    "component": [Function],
    "description": "Call a webook",
    "form": [Function],
    "name": "Call Webhook",
    "type": "call_webhook",
  },
  Object {
    "aliases": Array [
      "subflow",
    ],
    "component": [Function],
    "description": "Enter another flow",
    "form": [Function],
    "name": "Start a Flow",
    "type": "start_flow",
  },
  Object {
    "component": [Function],
    "description": "Start somebody else in a flow",
    "form": [Function],
    "formHelper": StartSessionFormHelper {},
    "name": "Start Somebody Else",
    "type": "start_session",
  },
  Object {
    "advanced": 2,
    "description": "Split by a custom expression",
    "form": [Function],
    "name": "Split by Expression",
    "type": "split_by_expression",
  },
  Object {
    "description": "Split by group membership",
    "form": [Function],
    "name": "Split by Group Membership",
    "type": "split_by_groups",
  },
  Object {
    "advanced": 2,
    "aliases": Array [
      "switch",
    ],
    "description": "Wait for the contact to respond",
    "form": [Function],
    "name": "Wait for Response",
    "type": "wait_for_response",
  },
]
`;

exports[`typeConfigs should provide type configs 2`] = `
Object {
  "add_contact_groups": Object {
    "component": [Function],
    "description": "Add the contact to a group",
    "form": [Function],
    "formHelper": AddGroupsFormHelper {},
    "name": "Add to Group",
    "type": "add_contact_groups",
  },
  "add_input_labels": Object {
    "component": [Function],
    "description": "Label the incoming message",
    "form": [Function],
    "formHelper": AddLabelsFormHelper {},
    "name": "Add Labels",
    "type": "add_input_labels",
  },
  "call_webhook": Object {
    "advanced": 1,
    "aliases": Array [
      "webhook",
    ],
    "component": [Function],
    "description": "Call a webook",
    "form": [Function],
    "name": "Call Webhook",
    "type": "call_webhook",
  },
  "missing": Object {
    "component": [Function],
    "description": " ** Unsupported ** ",
    "name": "Missing",
    "type": "missing",
  },
  "remove_contact_groups": Object {
    "component": [Function],
    "description": "Remove the contact from a group",
    "form": [Function],
    "formHelper": RemoveGroupsFormHelper {},
    "name": "Remove from Group",
    "type": "remove_contact_groups",
  },
  "send_broadcast": Object {
    "component": [Function],
    "description": "Send somebody else a message",
    "form": [Function],
    "formHelper": SendBroadcastFormHelper {},
    "name": "Send Broadcast",
    "type": "send_broadcast",
  },
  "send_email": Object {
    "component": [Function],
    "description": "Send an email",
    "form": [Function],
    "formHelper": SendEmailFormHelper {},
    "name": "Send Email",
    "type": "send_email",
  },
  "send_msg": Object {
    "advanced": 3,
    "component": [Function],
    "description": "Send the contact a message",
    "form": [Function],
    "formHelper": SendMsgFormHelper {},
    "name": "Send Message",
    "type": "send_msg",
  },
  "set_contact_channel": Object {
    "component": [Function],
    "description": "Update the contact",
    "form": [Function],
    "formHelper": SetContactAttribFormHelper {},
    "name": "Update Contact",
    "type": "set_contact_channel",
  },
  "set_contact_field": Object {
    "component": [Function],
    "description": "Update the contact",
    "form": [Function],
    "formHelper": SetContactAttribFormHelper {},
    "name": "Update Contact",
    "type": "set_contact_field",
  },
  "set_contact_language": Object {
    "component": [Function],
    "description": "Update the contact",
    "form": [Function],
    "formHelper": SetContactAttribFormHelper {},
    "name": "Update Contact",
    "type": "set_contact_language",
  },
  "set_contact_name": Object {
    "component": [Function],
    "description": "Update the contact",
    "form": [Function],
    "formHelper": SetContactAttribFormHelper {},
    "name": "Update Contact",
    "type": "set_contact_name",
  },
  "set_run_result": Object {
    "component": [Function],
    "description": "Save a result for this flow",
    "form": [Function],
    "formHelper": SetRunResultFormHelper {},
    "name": "Save Flow Result",
    "type": "set_run_result",
  },
  "split_by_expression": Object {
    "advanced": 2,
    "description": "Split by a custom expression",
    "form": [Function],
    "name": "Split by Expression",
    "type": "split_by_expression",
  },
  "split_by_groups": Object {
    "description": "Split by group membership",
    "form": [Function],
    "name": "Split by Group Membership",
    "type": "split_by_groups",
  },
  "start_flow": Object {
    "aliases": Array [
      "subflow",
    ],
    "component": [Function],
    "description": "Enter another flow",
    "form": [Function],
    "name": "Start a Flow",
    "type": "start_flow",
  },
  "start_session": Object {
    "component": [Function],
    "description": "Start somebody else in a flow",
    "form": [Function],
    "formHelper": StartSessionFormHelper {},
    "name": "Start Somebody Else",
    "type": "start_session",
  },
  "subflow": Object {
    "aliases": Array [
      "subflow",
    ],
    "component": [Function],
    "description": "Enter another flow",
    "form": [Function],
    "name": "Start a Flow",
    "type": "start_flow",
  },
  "switch": Object {
    "advanced": 2,
    "aliases": Array [
      "switch",
    ],
    "description": "Wait for the contact to respond",
    "form": [Function],
    "name": "Wait for Response",
    "type": "wait_for_response",
  },
  "wait_for_response": Object {
    "advanced": 2,
    "aliases": Array [
      "switch",
    ],
    "description": "Wait for the contact to respond",
    "form": [Function],
    "name": "Wait for Response",
    "type": "wait_for_response",
  },
  "webhook": Object {
    "advanced": 1,
    "aliases": Array [
      "webhook",
    ],
    "component": [Function],
    "description": "Call a webook",
    "form": [Function],
    "name": "Call Webhook",
    "type": "call_webhook",
  },
}
`;
